Review Request 2755: move runPreCheckInTest.sh to le-dev/scripts/ and add runprecheckintest to alias